--- a/src/main/resources/viewer.html
+++ b/src/main/resources/viewer.html
@@ -27,6 +27,12 @@
       stroke-width: 3px;
     }
 
+    path.http-server {
+      fill: none;
+      stroke: #FEE1B7;
+      stroke-width: 1px;
+    }
+
     text {
       font-family: sans-serif;
       font-size: 12px;
