add http client and server activity

--- a/src/main/resources/viewer.html
+++ b/src/main/resources/viewer.html
@@ -29,7 +29,7 @@
 
     path.http-server {
       fill: none;
-      stroke: #FEE1B7;
+    /* stroke: #FEE1B7; */
       stroke-width: 1px;
     }
 
