add http client and server activity

--- a/src/main/resources/viewer.html
+++ b/src/main/resources/viewer.html
@@ -27,9 +27,13 @@
       stroke-width: 3px;
     }
 
+    path.http-client {
+      fill: none;
+      stroke-width: 2px;
+    }
+
     path.http-server {
       fill: none;
-    /* stroke: #FEE1B7; */
       stroke-width: 1px;
     }
 
